--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Text Focus Analyzer</title>
+    <title>FreqLabs - Text Focus Analyzer</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="shortcut icon" href="/images/freqlabs-icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -13,7 +14,8 @@
 
         <!-- HEADER -->
         <header class="header">
-            <h1>Text Focus Analyzer</h1>
+            <h1>FreLabs</h1>
+            <h2>A Text Focus Analyzer</h2>
             <p>
                 Paste a job description or company content to instantly see
                 what the text emphasizes the most.
